# Auto-control

./: .gitignore  README.md  azure-pipelines.yml  build.sh  clean.bat  index.html  login.html
.github/workflows/: cmake-multi-platform.yml
LinxSrvc/: .gitignore  CMakeLists.txt  Makefile
LinxSrvc/IM/: IM.cc  IM.vcxproj  KaiSocket.cc  KaiSocket.h  Makefile
LinxSrvc/diff/: CMakeLists.txt  analyzer.cc
LinxSrvc/dpsk/: CMakeLists.txt  Chat.cc  Client.cc  CurlReq.cpp  CurlReq.h  CurlReqs.cpp  CurlReqs.h  Parser.hpp  Utils.hpp  params.txt
LinxSrvc/gSOAPverify/: Makefile  gSOAPverify.vcxproj
LinxSrvc/gSOAPverify/main/: mainSoap.cc
LinxSrvc/gSOAPverify/sql/: sqlDbReq.cc  sqlDbReq.h
LinxSrvc/gn/: CMakeLists.txt  CMakeSettings.json  main.cxx
LinxSrvc/hdware/: Makefile  dirtyc0w.c  gpio.h  linuxsnap.c  me909s.h
LinxSrvc/include/: String_-inl.h  Structures.h
LinxSrvc/test/: CMakeLists.txt
LinxSrvc/test/tests/: test1_string.cpp
LinxSrvc/webev/: Makefile  Utils.cpp  WebMain.cpp  WebevApi.cpp  webev.vcxproj
QtCases/: QtCases.vcxproj
QtGames/: .gitignore  MainWindow.cpp  MainWindow.h  QtGames.vcxproj  QtGames.vcxproj.filters  mainwindow.qrc  mainwindow.ui  mkallcase.sh
QtGames/wpsapi/: wpswindow.cpp
WinNTKline/: .gitignore  WinNTKline.sln
WinNTKline/CvMlwk/: CvMlwk.vcxproj
WinNTKline/IMclient/: client.vcxproj
WinNTKline/KlineUtil/: ClassDiagram.cd
WinNTKline/KlineUtil/IM/: TCPsocket_unix.cpp
WinNTKline/KlineUtil/mygl/: House.cc  House.h
WinNTKline/KlineUtil/script/: analyzer.py  call.bat
WinNTKline/KlineUtil/security/: encoding.cc  encoding.h
WinNTKline/MFCKline/: MFCKline.rc  MFCKline.vcxproj  MFCKline.vcxproj.filters  MFCKlineDlg.cpp  MyOglDrawDlg.cpp  MyOglDrawDlg.h  Resource.h
WinNTKline/TestUtils/: testUtils.rc  testUtils.vcxproj  testUtils.vcxproj.filters  testUtilsDlg.cpp
WinNTKline/WPFKline/WPFKline/: App.xaml  MainWindow.xaml  WPFKline.csproj
WinNTKline/WPFKline/WPFKline/Properties/: Resources.resx
trans/: getfile.php
